[tool.poetry]
name = "todo-application"
version = "0.1.0"
description = "A simple Todo application built with FastAPI."
authors = ["Your Name <your.email@example.com>"]

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.00"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
httpx = "^0.28.1"
